[tool.poetry]
name = "gis-fast"
version = "0.1.0"
description = ""
authors = ["Felipe Limeira <limeira.felipe94@gmail.com>"]
readme = "README.md"
packages = [{include = "gis_fast"}]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
geoalchemy2 = "^0.14.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
httpx = "^0.26.0"
shapely = "^2.0.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.1.11"
httpx = "^0.26.0"
isort = "^5.13.2"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn gis_fast.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=gis_fast -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
